fix: accordions not animating on firefox or apple devices

--- a/css/main.css
+++ b/css/main.css
@@ -123,13 +123,6 @@
 @layer components {
 
   /* ─────────────────────────────────────────
-     Accordions
-  ───────────────────────────────────────── */
-  .accordion-content-wrapper {
-    @apply grid grid-rows-[0fr] opacity-0 transition-[grid-template-rows] transition-opacity duration-500 ease-in-out;
-  }
-
-  /* ─────────────────────────────────────────
      Buttons
   ───────────────────────────────────────── */
   .btn {
